Integration of @JsonIgnoreProperties on UserDTO and RoleDTO, New END POINT in UserController  Type: GET - registeredUsers -